fixed pixel alignment in bit-title

--- a/src/css/bit.css
+++ b/src/css/bit.css
@@ -33,8 +33,8 @@ body {
     background-color: var(--background-color);
     position: absolute;
     display: table;
-    padding: 0 3rem;
-    margin: -2.3rem 0 0;
+    padding: 0 2rem;
+    margin: -2.4rem 0 0;
     
     box-shadow: 
     inset var(--resolution) 0 var(--lighting), /*left*/
